--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,7 +1,7 @@
 .nav-bar {
     background-color: #465472;
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row; */
     justify-content: left;
     font-size: calc(10px + 2vmin);
     border: 10px solid #778296
