--- a/src/app.css
+++ b/src/app.css
@@ -3,9 +3,10 @@ body {
     color: white;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-   
+
   }
   
   p {
@@ -15,18 +16,53 @@ body {
     text-shadow: 2px 2px 2px rgba(98, 98, 162, 0.4);
     padding: 10px;
   }
-  .buttons {
+  .button {
     display: flex;
     align-items: center;
     justify-self: center;
     justify-content: center;
-    width: 280px;
+    width: 120px;
     margin: auto;
   }
   
   .btn {
     background-color: blueviolet;
-    width: 120px;
+    color: blue;
+    width: 80px;
     border: 1px solid black;
     margin: 15px;
+  }
+
+  .nav-bar {
+    background-color: #465472;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    font-size: calc(10px + 2vmin);
+    border: 10px solid #778296;
+  }
+  
+  h2 {
+    color: white;
+    margin: 10px;
+  }
+  
+  a:link {
+    color: white;
+    margin: 10px;
+  }
+  
+  a:visited {
+    color: #61dafb;
+    margin: 10px;
+  }
+  
+  a:hover {
+    color: coral;
+    margin: 10px;
+  }
+  
+  a:active {
+    color: red;
+    margin: 10px;
   }
